[package]
name = "bbc-news-cli"
version = "1.0.3"
edition = "2021"
authors = ["Wesley Hill <wesley@hakobaito.co.uk>"]
description = "Browse BBC News like a hacker."
repository = "https://github.com/hako/bbcli"
homepage = "https://github.com/hako/bbcli"
license = "MIT"
keywords = ["news", "rss", "tui", "cli", "ratatui"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["*.gif"]

[lib]
name = "bbc_news_cli"
path = "src/lib.rs"

[[bin]]
name = "bbcli"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
quick-xml = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
webbrowser = "1.0"
dirs = "5.0"
chrono = "0.4"
toml = "0.8"
anyhow = "1.0"
ratatui-image = "1.0"
image = "0.25"
lazy_static = "1.5"
scraper = "0.20"
html2text = "0.12"
dom_smoothie = "0.2"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"
serde_derive = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Automatically strip symbols from the binary
panic = "abort"     # Abort on panic (smaller code)
